--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 <body>
     <h1>
-        This is my gihub pages Website!
+        This is my github pages Website!
     </h1>
 </body>
 </html>
